# outcome

./: CMakeLists.txt  Licence.txt
cmake/: outcomeConfig.cmake.in
core/: domain.hpp  errc.hpp  nested.hpp  outcome.hpp  posix_code.hpp  quick_enum.hpp  result.hpp  status_code.hpp  status_error.hpp  string_ref.hpp  system_code.hpp  traits.hpp  try.hpp  utils.hpp
include/: outcome.hpp
include/outcome/: outcome.hpp
include/outcome/ext/: exception.hpp  std_error_code.hpp
tools/: domain-id.txt  quick_status_code.py
